jQuery Edit In Place (JEIP)
Change Log

0.1.1 - 7 Nov 2008
	- Only focus the edit form if the option is set

0.1.0 - 5 Nov 2008
	- Initial port of Prototype based edit in place code