@@ -50,7 +50,7 @@ Select form, what is your favorite color: <span id="select-edit">Blue</span>
 <script type="text/javascript" src="jquery-1.2.6.min.js"></script>
 <script type="text/javascript" src="../jeip.js"></script>
 <script type="text/javascript">
-	$( "#text-edit" ).eip( "save.php" );
+	$( "#text-edit" ).eip( "save.php", { select_text: true } );
 	$( "#textarea-edit" ).eip( "save.php", { 
 		form_type: "textarea"
 	} );
