@@ -3,6 +3,7 @@ Change Log
 
 0.1.1 - 7 Nov 2008
 	- Only focus the edit form if the option is set
+	- Make the select_text option work
 
 0.1.0 - 5 Nov 2008
 	- Initial port of Prototype based edit in place code
